- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
  Not Evaluated                     
     - 
    Qt Creator 10.0.0
 
- 
        
 - 
        3dd4b98c0 (master), 8854f53a4 (master)
 
Currently, if we copy CMakePresets.json from one project to another, and configure both projects with the same preset - we end up with the same Kit generated from the preset to be added twice.
Obviously, it doesn't make sense.
If (implicitly) added Kit is exactly the same as existing, it shouldn't be added, or the warning with opt-out should be presented to user.
 
 
 
| For Gerrit Dashboard: QTCREATORBUG-29075 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 475051,5 | CMakePM: Better Qt import detection | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 | 
| 475054,2 | CMakePM: Fix duplicated CMake presets kits | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |